--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-scroll-parallax": "^3.4.5",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.3",
     "react-tsparticles": "^2.12.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.6",
-    "tsparticles": "^3.8.1",
+    "tsparticles": "^2.12.0",
     "tsparticles-preset-stars": "^2.12.0"
   },
   "devDependencies": {
