--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.6",
-    "framer-motion": "^12.15.0",
+    "devicon": "^2.17.0",
+    "framer-motion": "^12.23.7",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-scroll-parallax": "^3.4.5",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.3",
     "react-tsparticles": "^2.12.2",
